--- a/LeQuangTung/index.html
+++ b/LeQuangTung/index.html
@@ -11,7 +11,7 @@
     <meta property="og:url" content="https://quyetnguyen.club" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="THANHTOANMMO.TK - Được Thiết Kế Và Vận Hành Bởi Admin Nguyễn Đình Quyết." />
-    <meta property="og:image" content="https://i.imgur.com/T7k7YDW.jpg" />
+    <meta property="og:image" content="https://i.imgur.com/HFMSd62.png" />
 
 
     
@@ -224,7 +224,7 @@
                     <div id="cover-image" style="background-image: url('./public/images/ItsukishimaGateJapan-day.gif');"></div>
                     <div id="profile-header">
                         <!-- link ảnh avt của bạn -->
-                        <div id="avatar-image" style="background-image: url('https://i.imgur.com/Q4W0Lya.jpg');"></div>
+                        <div id="avatar-image" style="background-image: url('https://i.imgur.com/HFMSd62.png');"></div>
                         <div id="name">
                             <p id="first-name" class="names">Lê Quang Tùng</p>
                             <p id="last-name" class="names"></p>
