--- a/LeQuangTung/index.html
+++ b/LeQuangTung/index.html
@@ -259,10 +259,10 @@
                             <div class="bio-story-thumb" style="background-image: url('./public/images/wallet.png');"></div>
                             <div class="link-content">
                                 <p>Thông Tin Thanh Toán</p>
-                                <span onclick="window.open('https://iamquyet.tk/NguyenDinhQuyet', '_blank')">Lê Quang Tùng</span>
+                                <span onclick="window.open('https://thanhtoanmmo.tk/LeQuangTung/Payment/', '_blank')">Lê Quang Tùng</span>
                             </div>
                             <div class="link-btn">
-                                <div class="link-btn-chill light-orange" onclick="window.open('https://iamquyet.tk/NguyenDinhQuyet', '_blank')">OPEN</div>
+                                <div class="link-btn-chill light-orange" onclick="window.open('https://thanhtoanmmo.tk/LeQuangTung/Payment/', '_blank')">OPEN</div>
                             </div>
                         </div>
 
