--- a/LeQuangTung/index.html
+++ b/LeQuangTung/index.html
@@ -200,7 +200,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
-<!--     <div class="center">
+    <div class="center">
         <div class="popup">
             <div class="title">
                 Thông Báo
@@ -216,7 +216,7 @@
     </div>
     <div id="root">
         <div id="main">
-            <div class="container"> -->
+            <div class="container">
 
 
                 <header>
