--- a/LeQuangTung/Payment/index.html
+++ b/LeQuangTung/Payment/index.html
@@ -484,7 +484,7 @@
 
         <!-- Header Image -->
         <div class="header-image">
-            <div class="js-parallax" style="background-image: url(https://i.imgur.com/T7k7YDW.jpg);"></div>
+            <div class="js-parallax" style="background-image: url(https://i.imgur.com/UeS18f9.png);"></div>
         </div>
 
         <div class="container gutter-top ">
