--- a/KieuCaoHuan/index.html
+++ b/KieuCaoHuan/index.html
@@ -224,9 +224,9 @@
                     <div id="cover-image" style="background-image: url('./public/images/ItsukishimaGateJapan-day.gif');"></div>
                     <div id="profile-header">
                         <!-- link ảnh avt của bạn -->
-                        <div id="avatar-image" style="background-image: url('https://i.imgur.com/HFMSd62.png');"></div>
+                        <div id="avatar-image" style="background-image: url('https://i.imgur.com/PmqDGsz.png');"></div>
                         <div id="name">
-                            <p id="first-name" class="names">Lê Quang Tùng</p>
+                            <p id="first-name" class="names">Kiều Cao Huấn</p>
                             <p id="last-name" class="names"></p>
                             <div id="skills">
 
@@ -259,7 +259,7 @@
                             <div class="bio-story-thumb" style="background-image: url('./public/images/wallet.png');"></div>
                             <div class="link-content">
                                 <p>Thông Tin Thanh Toán</p>
-                                <span onclick="window.open('https://thanhtoanmmo.tk/LeQuangTung/Payment/', '_blank')">Lê Quang Tùng</span>
+                                <span onclick="window.open('https://thanhtoanmmo.tk/LeQuangTung/Payment/', '_blank')">Kiều Cao Huấn</span>
                             </div>
                             <div class="link-btn">
                                 <div class="link-btn-chill light-orange" onclick="window.open('https://thanhtoanmmo.tk/LeQuangTung/Payment/', '_blank')">OPEN</div>
@@ -281,10 +281,10 @@
                             <div class="bio-story-thumb" style="background-image: url('./public/images/facebook.jpg');"></div>
                             <div class="link-content">
                                 <p>Facebook</p>
-                                <span onclick="window.open('https://www.facebook.com/100009052041596/', '_blank')">@Tung2005HN</span>
+                                <span onclick="window.open('https://www.facebook.com/100002520393416/', '_blank')">@100002520393416</span>
                             </div>
                             <div class="link-btn">
-                                <div class="link-btn-chill light-orange" onclick="window.open('https://www.facebook.com/100009052041596/', '_blank')">OPEN</div>
+                                <div class="link-btn-chill light-orange" onclick="window.open('https://www.facebook.com/1000025203934166/', '_blank')">OPEN</div>
                             </div>
                         </div>
                         
@@ -292,7 +292,7 @@
                             <div class="bio-story-thumb" style="background-image: url('./public/images/phone.jpg');"></div>
                             <div class="link-content">
                                 <p>Hotline</p>
-                                <span onclick="window.open('tel:0388669076')">03.88.66.9076</span>
+                                <span onclick="window.open('tel:0345198662')">0345.198.662</span>
                             </div>
                             <div class="link-btn">
                                 <div class="link-btn-chill light-orange" onclick="window.open('tel:0388669076', '_blank')">OPEN</div>
@@ -314,10 +314,10 @@
                             <div class="bio-story-thumb" style="background-image: url('./public/images/zalo.jpg');"></div>
                             <div class="link-content">
                                 <p>Zalo</p>
-                                <span onclick="window.open('https://zalo.me/0388669076', '_blank')">Lê Quang Tùng</span>
+                                <span onclick="window.open('https://zalo.me/0345198662', '_blank')">Kiều Cao Huấn</span>
                             </div>
                             <div class="link-btn">
-                                <div class="link-btn-chill light-orange" onclick="window.open('https://zalo.me/0388669076', '_blank')">OPEN</div>
+                                <div class="link-btn-chill light-orange" onclick="window.open('https://zalo.me/0345198662', '_blank')">OPEN</div>
                             </div>
                         </div>
 
@@ -325,20 +325,20 @@
                             <div class="bio-story-thumb" style="background-image: url('./public/images/telegram.png');"></div>
                             <div class="link-content">
                                 <p>Telegram</p>
-                                <span onclick="window.open('https://t.me/Tung2005HN', '_blank')">Lê Quang Tùng</span>
+<!--                                 <span onclick="window.open('https://t.me/Tung2005HN', '_blank')">Lê Quang Tùng</span>
                             </div>
                             <div class="link-btn">
                                 <div class="link-btn-chill light-orange" onclick="window.open('https://t.me/Tung2005HN', '_blank')">OPEN</div>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="link-item">
                             <div class="bio-story-thumb" style="background-image: url('./public/images/gmail.jpg');"></div>
                             <div class="link-content">
                                 <p>Gmail</p>
-                                <span onclick="window.open('mailto:tung2005HN@gmail.com')">tung2005HN@gmail.com</span>
+                                <span onclick="window.open('mailto:kieucaohuan2011@gmail.com')">kieucaohuan2011@gmail.com</span>
                             </div>
                             <div class="link-btn">
-                                <div class="link-btn-chill light-orange" onclick="window.open('mailto:tung2005HN@gmail.com', '_blank')">OPEN</div>
+                                <div class="link-btn-chill light-orange" onclick="window.open('mailto:kieucaohuan2011@gmail.com', '_blank')">OPEN</div>
                             </div>
                         </div>
 
