--- a/KieuCaoHuan/Payment/index.html
+++ b/KieuCaoHuan/Payment/index.html
@@ -520,12 +520,12 @@
                         <li><span class="overhead"><i class="icon-img"><img height="25" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ec/Circle-icons-mail.svg/1200px-Circle-icons-mail.svg.png"></i></span>
                             <a href="mailto:kieucaohuan2011@gmail.com"
                                 target="_blank">
-                                <font color="white"><b>Tung2005HN@gmail.com</b></font>
+                                <font color="white"><b>kieucaohuan2011@gmail.com</b></font>
                             </a>
                         </li>
                         <li><span class="overhead"><i class="icon-img"><img height="25" src="https://cdn-icons-png.flaticon.com/128/901/901141.png"></i></span>
                             <a href="tel:0345198662" target="_blank">
-                                <font color="white"><b>03.88.66.9076</b></font>
+                                <font color="white"><b>0345.198.662</b></font>
                             </a>
                         </li>
                     </ul>
