--- a/KieuCaoHuan/index.html
+++ b/KieuCaoHuan/index.html
@@ -321,11 +321,11 @@
                             </div>
                         </div>
 
-                        <div class="link-item">
+<!--                         <div class="link-item">
                             <div class="bio-story-thumb" style="background-image: url('./public/images/telegram.png');"></div>
                             <div class="link-content">
                                 <p>Telegram</p>
-<!--                                 <span onclick="window.open('https://t.me/Tung2005HN', '_blank')">Lê Quang Tùng</span>
+                                <span onclick="window.open('https://t.me/Tung2005HN', '_blank')">Lê Quang Tùng</span>
                             </div>
                             <div class="link-btn">
                                 <div class="link-btn-chill light-orange" onclick="window.open('https://t.me/Tung2005HN', '_blank')">OPEN</div>
