--- a/KieuCaoHuan/Payment/index.html
+++ b/KieuCaoHuan/Payment/index.html
@@ -504,9 +504,9 @@
                             <li><a href="https://zalo.me/0345198662" target="_blank"><span class="nav-link-icon mr-1">
         <i class="icon-img"><img height="20" src="https://hotro.weba.vn/shop/images/hotro/Kho-ung-dung/Zalo-chat-tructuyen/Zalo.png"></i>
        </span></a></li>
-<!--                             <li><a href="https://www.instagram.com/Tung2005HN" target="_blank"><span class="nav-link-icon mr-1">
+                            <li><a href="https://www.instagram.com/chocope.09/" target="_blank"><span class="nav-link-icon mr-1">
         <i class="icon-img"><img height="20" src="https://subgiare.vn/assets/images/icon/instagram.svg"></i>
-       </span></a></li> -->
+       </span></a></li>
 <!--                             <li><a href="https://t.me/Tung2005HN" target="_blank"><span class="nav-link-icon mr-1">
         <i class="icon-img"><img height="20" src="https://subgiare.vn/assets/images/icon/telegram.svg"></i>
        </span></a></li> -->
