--- a/BuiHuuTuan/index.html
+++ b/BuiHuuTuan/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trang Thông Tin Cá Nhân</title>
     <link rel="shortcut icon" type="image/png" href="https://i.imgur.com/jHs1N44.png" />
-    <meta property="og:title" content="Lê Quang Tùng | Hệ Thống Thông Tin Cá Nhân" />
+    <meta property="og:title" content="Bùi Hữu Tuấn | Hệ Thống Thông Tin Cá Nhân" />
     <meta property="og:url" content="https://quyetnguyen.club" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="THANHTOANMMO.TK - Được Thiết Kế Và Vận Hành Bởi Admin Nguyễn Đình Quyết." />
@@ -224,9 +224,9 @@
                     <div id="cover-image" style="background-image: url('./public/images/ItsukishimaGateJapan-day.gif');"></div>
                     <div id="profile-header">
                         <!-- link ảnh avt của bạn -->
-                        <div id="avatar-image" style="background-image: url('https://i.imgur.com/HFMSd62.png');"></div>
+                        <div id="avatar-image" style="background-image: url('https://i.imgur.com/5Bc6fCS.png');"></div>
                         <div id="name">
-                            <p id="first-name" class="names">Lê Quang Tùng</p>
+                            <p id="first-name" class="names">Bùi Hữu Tuấn</p>
                             <p id="last-name" class="names"></p>
                             <div id="skills">
 
@@ -259,10 +259,10 @@
                             <div class="bio-story-thumb" style="background-image: url('./public/images/wallet.png');"></div>
                             <div class="link-content">
                                 <p>Thông Tin Thanh Toán</p>
-                                <span onclick="window.open('https://thanhtoanmmo.tk/LeQuangTung/Payment/', '_blank')">Lê Quang Tùng</span>
+                                <span onclick="window.open('https://thanhtoanmmo.tk/BuiHuuTuan/Payment/', '_blank')">Lê Quang Tùng</span>
                             </div>
                             <div class="link-btn">
-                                <div class="link-btn-chill light-orange" onclick="window.open('https://thanhtoanmmo.tk/LeQuangTung/Payment/', '_blank')">OPEN</div>
+                                <div class="link-btn-chill light-orange" onclick="window.open('https://thanhtoanmmo.tk/BuiHuuTuan/Payment/', '_blank')">OPEN</div>
                             </div>
                         </div>
 
@@ -281,10 +281,10 @@
                             <div class="bio-story-thumb" style="background-image: url('./public/images/facebook.jpg');"></div>
                             <div class="link-content">
                                 <p>Facebook</p>
-                                <span onclick="window.open('https://www.facebook.com/100009052041596/', '_blank')">@Tung2005HN</span>
+                                <span onclick="window.open('https://www.facebook.com/100024420411069/', '_blank')">@dvfb.buihuutuan</span>
                             </div>
                             <div class="link-btn">
-                                <div class="link-btn-chill light-orange" onclick="window.open('https://www.facebook.com/100009052041596/', '_blank')">OPEN</div>
+                                <div class="link-btn-chill light-orange" onclick="window.open('https://www.facebook.com/100024420411069/', '_blank')">OPEN</div>
                             </div>
                         </div>
                         
@@ -292,24 +292,24 @@
                             <div class="bio-story-thumb" style="background-image: url('./public/images/phone.jpg');"></div>
                             <div class="link-content">
                                 <p>Hotline</p>
-                                <span onclick="window.open('tel:0388669076')">03.88.66.9076</span>
+                                <span onclick="window.open('tel:0983456412')">0983.456.412</span>
                             </div>
                             <div class="link-btn">
-                                <div class="link-btn-chill light-orange" onclick="window.open('tel:0388669076', '_blank')">OPEN</div>
+                                <div class="link-btn-chill light-orange" onclick="window.open('tel:0983456412', '_blank')">OPEN</div>
                             </div>
                         </div>
                         
-<!--                         <div class="link-item">
+                        <div class="link-item">
                             <div class="bio-story-thumb" style="background-image: url('./public/images/phone.jpg');"></div>
                             <div class="link-content">
                                 <p>Hotline</p>
-                                <span onclick="window.open('tel:0879714328')">0879.714.328</span>
+                                <span onclick="window.open('tel:0366631123')">03666.31.123</span>
                             </div>
                             <div class="link-btn">
-                                <div class="link-btn-chill light-orange" onclick="window.open('tel:0879714328', '_blank')">OPEN</div>
+                                <div class="link-btn-chill light-orange" onclick="window.open('tel:0366631123', '_blank')">OPEN</div>
                             </div>
                         </div>
- -->
+
                         <div class="link-item">
                             <div class="bio-story-thumb" style="background-image: url('./public/images/zalo.jpg');"></div>
                             <div class="link-content">
@@ -321,7 +321,7 @@
                             </div>
                         </div>
 
-                        <div class="link-item">
+<!--                         <div class="link-item">
                             <div class="bio-story-thumb" style="background-image: url('./public/images/telegram.png');"></div>
                             <div class="link-content">
                                 <p>Telegram</p>
@@ -330,15 +330,15 @@
                             <div class="link-btn">
                                 <div class="link-btn-chill light-orange" onclick="window.open('https://t.me/Tung2005HN', '_blank')">OPEN</div>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="link-item">
                             <div class="bio-story-thumb" style="background-image: url('./public/images/gmail.jpg');"></div>
                             <div class="link-content">
                                 <p>Gmail</p>
-                                <span onclick="window.open('mailto:tung2005HN@gmail.com')">tung2005HN@gmail.com</span>
+                                <span onclick="window.open('mailto:Dvfb.buihuutuan@gmail.com')">Dvfb.buihuutuan@gmail.com</span>
                             </div>
                             <div class="link-btn">
-                                <div class="link-btn-chill light-orange" onclick="window.open('mailto:tung2005HN@gmail.com', '_blank')">OPEN</div>
+                                <div class="link-btn-chill light-orange" onclick="window.open('mailto:Dvfb.buihuutuan@gmail.com', '_blank')">OPEN</div>
                             </div>
                         </div>
 
