--- a/BuiHuuTuan/index.html
+++ b/BuiHuuTuan/index.html
@@ -259,7 +259,7 @@
                             <div class="bio-story-thumb" style="background-image: url('./public/images/wallet.png');"></div>
                             <div class="link-content">
                                 <p>Thông Tin Thanh Toán</p>
-                                <span onclick="window.open('https://thanhtoanmmo.tk/BuiHuuTuan/Payment/', '_blank')">Lê Quang Tùng</span>
+                                <span onclick="window.open('https://thanhtoanmmo.tk/BuiHuuTuan/Payment/', '_blank')">Bùi Hữu Tuấn</span>
                             </div>
                             <div class="link-btn">
                                 <div class="link-btn-chill light-orange" onclick="window.open('https://thanhtoanmmo.tk/BuiHuuTuan/Payment/', '_blank')">OPEN</div>
