--- a/BuiHuuTuan/index.html
+++ b/BuiHuuTuan/index.html
@@ -314,10 +314,10 @@
                             <div class="bio-story-thumb" style="background-image: url('./public/images/zalo.jpg');"></div>
                             <div class="link-content">
                                 <p>Zalo</p>
-                                <span onclick="window.open('https://zalo.me/0388669076', '_blank')">Lê Quang Tùng</span>
+                                <span onclick="window.open('https://zalo.me/0863723387', '_blank')">Bùi Hữu Tuấn</span>
                             </div>
                             <div class="link-btn">
-                                <div class="link-btn-chill light-orange" onclick="window.open('https://zalo.me/0388669076', '_blank')">OPEN</div>
+                                <div class="link-btn-chill light-orange" onclick="window.open('https://zalo.me/0863723387', '_blank')">OPEN</div>
                             </div>
                         </div>
 
