--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:description" content="IAMQUYET.TK - Được Thiết Kế Và Vận Hành Bởi Admin Nguyễn Đình Quyết." />
     <meta property="og:image" content="https://i.imgur.com/T7k7YDW.jpg" />
+    <meta property="google-site-verification"="0-rHRPHg3cNgc3RosOVGVJDnjAHxnyhJxNrBasiUUH4"
 
 
     
