--- a/index.html
+++ b/index.html
@@ -15,7 +15,15 @@
     <meta property="google-site-verification"="0-rHRPHg3cNgc3RosOVGVJDnjAHxnyhJxNrBasiUUH4"
 
 
-    
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QVXY4JSB62"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){window.dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-QVXY4JSB62');
+</script>
     
 <script>
         var chatbox = document.getElementById('fb-customer-chat');
