--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:description" content="IAMQUYET.TK - Được Thiết Kế Và Vận Hành Bởi Admin Nguyễn Đình Quyết." />
     <meta property="og:image" content="https://i.imgur.com/T7k7YDW.jpg" />
-    <meta name="google-site-verification" content="0-rHRPHg3cNgc3RosOVGVJDnjAHxnyhJxNrBasiUUH4"
+<!--     <meta name="google-site-verification" content="0-rHRPHg3cNgc3RosOVGVJDnjAHxnyhJxNrBasiUUH4" -->
 
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
