--- a/BuiHuuTuan/Payment/index.html
+++ b/BuiHuuTuan/Payment/index.html
@@ -495,7 +495,7 @@
                         <img class="header__photo-img" src=https://i.imgur.com/5Bc6fCS.png">
                     </div>
                     <div class="header__base-info">
-                        <h3 class="title titl--h1"><b>Bùi Hũu Tuấn</b></h3>
+                        <h3 class="title titl--h1"><b>Bùi Hữu Tuấn</b></h3>
                         <div class="skill-item" style="color: #EF9D64;"><b>DESINGER - DEVELOPER</b></div>
                         <ul class="header__social">
                             <li><a href="https://www.facebook.com/100002520393416/" target="_blank"><span class="nav-link-icon mr-1">
