--- a/LeQuangTung/Payment/index.html
+++ b/LeQuangTung/Payment/index.html
@@ -563,7 +563,7 @@
                                 <!-- Case Item -->
                                 <div class="col-12 col-lg-6">
                                     <div class="case-item">
-                                        <img src="https://hoangvanlinh.vn/assets/images/bank/mbbank.png" height="55px">
+                                        <img src="https://i.imgur.com/oFjEhTv.png" height="55px">
                                         <div>&nbsp;
                                             <h4 class="title title--h4">MB Bank</h4>
                                             <p><b>LE QUANG HAO</b><br><b>999.255.2005.999</b></p>
@@ -574,7 +574,7 @@
 
 <!--                                 <div class="col-12 col-lg-6">
                                     <div class="case-item">
-                                        <img src="https://hoangvanlinh.vn/assets/images/bank/mbbank.png" height="55px">
+                                        <img src="https://i.imgur.com/oFjEhTv.png" height="55px">
                                         <div>&nbsp;
                                             <h4 class="title title--h4">MB Bank</h4>
                                             <p><b>NGUYEN DINH QUYET</b><br><b>3688.699.688.699</b></p>
@@ -586,7 +586,7 @@
                                 <!-- Case Item -->
                                 <div class="col-12 col-lg-6">
                                     <div class="case-item">
-                                        <img src="https://hoangvanlinh.vn/assets/images/bank/momo.png" height="55px">
+                                        <img src="https://i.imgur.com/HtlI1z5.png" height="55px">
                                         <div>&nbsp;
                                             <h4 class="title title--h4">Momo</h4>
                                             <p><b>Lê Anh Tuấn</b><br><b>0899.813.846</b></p>
@@ -594,18 +594,6 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-12 col-lg-6">
-                                    <div class="case-item">
-                                        <img src="https://hoangvanlinh.vn/assets/images/bank/tsr.png" height="55px">
-                                        <div>&nbsp;
-                                            <h4 class="title title--h4">TheSieuRe</h4>
-                                            <p><b>Lê Quang Tùng</b><br><b>0906.179.816</b></p>
-                                            <button type="button" style="height:30px;width:100px" class="btn btn-primary" onclick="geturl('0333368640')">COPY</button>
-                                        </div>
-                                    </div>
-                                </div>
-                                <!-- Case Item -->
-
                             </div>
                             <center>
                                 <a href="https://thanhtoanmmo.tk" style="border-color: ##00FFFF;
