--- a/KieuCaoHuan/Payment/index.html
+++ b/KieuCaoHuan/Payment/index.html
@@ -563,7 +563,7 @@
                                 <!-- Case Item -->
                                 <div class="col-12 col-lg-6">
                                     <div class="case-item">
-                                        <img src="https://hoangvanlinh.vn/assets/images/bank/mbbank.png" height="55px">
+                                        <img src="https://i.imgur.com/oFjEhTv.png" height="55px">
                                         <div>&nbsp;
                                             <h4 class="title title--h4">MB Bank</h4>
                                             <p><b>KIEU CAO HUAN</b><br><b>65555.2004</b></p>
@@ -574,7 +574,7 @@
 
 <!--                                 <div class="col-12 col-lg-6">
                                     <div class="case-item">
-                                        <img src="https://hoangvanlinh.vn/assets/images/bank/mbbank.png" height="55px">
+                                        <img src="https://i.imgur.com/oFjEhTv.png" height="55px">
                                         <div>&nbsp;
                                             <h4 class="title title--h4">MB Bank</h4>
                                             <p><b>NGUYEN DINH QUYET</b><br><b>3688.699.688.699</b></p>
@@ -586,7 +586,7 @@
                                 <!-- Case Item -->
                                 <div class="col-12 col-lg-6">
                                     <div class="case-item">
-                                        <img src="https://hoangvanlinh.vn/assets/images/bank/momo.png" height="55px">
+                                        <img src="https://i.imgur.com/HtlI1z5.png" height="55px">
                                         <div>&nbsp;
                                             <h4 class="title title--h4">Momo</h4>
                                             <p><b>Kiều Cao Huấn</b><br><b>0345.198.662</b></p>
