--- a/BuiHuuTuan/Payment/index.html
+++ b/BuiHuuTuan/Payment/index.html
@@ -563,7 +563,7 @@
                                 <!-- Case Item -->
                                 <div class="col-12 col-lg-6">
                                     <div class="case-item">
-                                        <img src="https://hoangvanlinh.vn/assets/images/bank/mbbank.png" height="55px">
+                                        <img src="https://i.imgur.com/oFjEhTv.png" height="55px">
                                         <div>&nbsp;
                                             <h4 class="title title--h4">MB Bank</h4>
                                             <p><b>BUI HUU TUAN</b><br><b>77777.37.55555</b></p>
@@ -586,7 +586,7 @@
                                 <!-- Case Item -->
                                 <div class="col-12 col-lg-6">
                                     <div class="case-item">
-                                        <img src="https://hoangvanlinh.vn/assets/images/bank/momo.png" height="55px">
+                                        <img src="https://i.imgur.com/HtlI1z5.png" height="55px">
                                         <div>&nbsp;
                                             <h4 class="title title--h4">Momo</h4>
                                             <p><b>Bùi Hữu Tuấn</b><br><b>0983.456.412</b></p>
